Include ATC18 simple applications

--- a/src/Makefile
+++ b/src/Makefile
@@ -10,10 +10,10 @@ CFLAGS += -O2
 CFLAGS += -DDEBUG -g -Wall -I$(POPCORN_INC_PATH)
 #CFLAGS += -DWAIT_FOR_DEBUGGER
 
-LDFLAGS += -static -pthread -L$(POPCORN_LIB_PATH)
-LIBS += -l:$(LIBMIGRATE)
+LDFLAGS += -static -L$(POPCORN_LIB_PATH)
+LIBS += -pthread -l:$(LIBMIGRATE)
 
-TARGETS = basic pingpong demo mt stack rw status
+TARGETS = basic pingpong demo mt stack rw status kmeans grep
 OBJDUMPS =
 
 all: $(TARGETS) $(OBJDUMPS)
@@ -47,6 +47,12 @@ status: status.o
 
 demo.asm: demo
 	$(OBJDUMP) $< > $@
+
+kmeans: kmeans.o
+	$(CC) $(LDFLAGS) $^ $(LIBS) -o $@
+
+grep: grep.o
+	$(CC) $(LDFLAGS) $^ $(LIBS) -o $@
 
 clean:
 	rm -f $(TARGETS) $(OBJDUMPS) *.o
